# foil

./: .gitignore  license.md  readme.md  tsconfig.json
.github/workflows/: ci.yml
backend/: Cargo.toml  readme.md
backend/src/: main.rs
backend/src/github/: mod.rs  update.rs
backend/src/graphql/: async_graphql_axum.rs  mod.rs  posts.rs
backend/src/graphql/sql/: post_load.sql  post_permalink.sql  post_recursive.sql  post_recursive_public.sql  post_search.sql  posts_from_glob.sql  posts_from_permalinks.sql
cli/: .gitignore  Cargo.toml  build.rs  readme.md
cli/builder/: package-lock.json  package.json  readme.md  tsconfig.json
cli/builder/src/: foil-builder.ts  post-build.ts  resolve-imports.ts  types.ts
cli/builder/src/misc/: remark-code.ts
cli/migrations/: 0_drop-tables.sql  1_default-data.sql
cli/src/: error.rs  main.rs  misc.rs  query_post.rs  reset.rs  server-renderer-template.txt  server-renderer.js  server-renderer.tsx  server.rs
cli/src/builder/: build_mode.rs  database.rs  metadata.rs  mod.rs  nodejs.rs  package_schema.rs  resolver.rs  rss.rs  static_assets.rs
cli/src/sql/: post_from_permalink.sql  posts_from_glob.sql
docs/: design-decisions.md  foil-icon.afdesign
