[package]
name = "foil_cli"
version = "0.4.0"
authors = ["Alain Galvan <hi@alain.xyz>"]
edition = "2021"

[dependencies]
async-std = { version = "1.12.x", features = ["attributes"] }
chrono = { version = "0.4.x", features = ["serde"] }
clap = "4.4.x"
futures = "0.3.x"
glob = "0.3.x"
imagesize = "0.12.0"
lexiclean = "0.0.1"
lazy_static = "1.4.0"
path-slash = "0.2.x"
rss = "2.0.x"
serde = "1.0.x"
serde_derive = "1.0.x"
serde_json = "1.0.x"
sqlx = { version = "0.7.x", features = [
    "bigdecimal",
    "chrono",
    "json",
    "postgres",
    "runtime-async-std-rustls",
    "rust_decimal",
    "time",
    "uuid",
] }
walkdir = "2.4.0"
