[package]
name = "foil_cli"
version = "0.5.2"
authors = ["Alain Galvan <hi@alain.xyz>"]
edition = "2021"

[dependencies]
async-std = { version = "1.13.x", features = ["attributes"] }
chrono = { version = "0.4.x", features = ["serde"] }
clap = "4.5.x"
futures = "0.3.x"
glob = "0.3.x"
imagesize = "0.14.x"
lexiclean = "0.0.1"
lazy_static = "1.5.x"
path-slash = "0.2.x"
rss = "2.0.x"
serde = "1.0.x"
serde_derive = "1.0.x"
serde_json = "1.0.x"
sqlx = { version = "0.8.x", features = [
    "bigdecimal",
    "chrono",
    "json",
    "postgres",
    "runtime-async-std-rustls",
    "rust_decimal",
    "time",
    "uuid",
] }
walkdir = "2.5.x"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["now"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 16
strip = true

[features]
buildinfo = []
